NetworkPolicy/Networkpolicy_denied.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-denied
spec:
  podSelector: {}
  policyTypes:
    - Ingress
